[package]
name = "userw"
rust-version.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
include.workspace = true

[dependencies]
kaspa-addresses.workspace = true
# kaspa-utxoindex.workspace = true
hex = "0.4.3"

[lints]
workspace = true
